<?xml version="1.0"?>
<package>
  <name>map_generator</name>
  <version>1.0.0</version>
  <description>Generates 2d occupancy grid maps.</description>

  <maintainer email="vladimirrim@gmail.com">Vladimir Egorov</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>


  <build_depend>roscpp</build_depend>
  <build_depend>nav_msgs</build_depend>



  <run_depend>roscpp</run_depend>
  <run_depend>nav_msgs</run_depend>


</package>
